# aborg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/audiobook_organizer/: __init__.py  analyzer.py  cache.py  cli.py  config.py  fetcher.py  organizer.py  parser.py  scanner.py
tests/: conftest.py  test_analyzer.py  test_cache.py  test_cli.py  test_config.py  test_fetcher.py  test_organizer.py  test_parser.py  test_scanner.py
